--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -193,6 +193,7 @@
                       <p class="card-text">Responsável: {{ row?.nomeResponsavel }}</p>
                       <p class="card-text">Modalidade: {{ row?.modalidade }}</p>
                       <p class="card-text">Situação: {{ row?.status }}</p>
+                      <p class="card-text">Telefone: {{ row?.telefone }}</p>
                       <p class="card-text">
                         Consulta Confirmada:
                         <span [style.font-weight]="row?.isConfirmed === 'Confirmado' ? 'bold' : 'bold'" [style.color]="row?.isConfirmed === 'Confirmado' ? 'green' : 'red'">
